--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Frontier Advisor</title>
-  <h1>Register</h1>
+ 
 </head>
+
 <body>
+
+  <div id="root"></div>
   <script type="module" src="main.js"></script>
+
+
 </body>
 </html>
