--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Frontier Advisor</title>
  
 </head>
 
 <body>
+  <div id= "container" class="flex-box"> </div>
 
   <div id="root"></div>
   <script type="module" src="main.js"></script>
