--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <div id= "container" class="flex-box"> </div>
 
   <div id="root"></div>
+
+</div>
   <script type="module" src="main.js"></script>
 
 
