--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,13 @@
   <div id="root"></div>
 
 </div>
-  <script type="module" src="main.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
 
+  <script type="module" src="main.js"></script>
+  
 
 </body>
 </html>
