--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
 
   
-  <div id= "container" class="flex-box"> </div> 
+  <!--<div id= "container" class="flex-box"> </div> -->
   <div id="root"></div>
 
 </div>
